add api to return questions for an issue

--- a/resources/assets/sass/issue.scss
+++ b/resources/assets/sass/issue.scss
@@ -10,6 +10,7 @@
       border-bottom: 1px solid #ccc;
       .sub-title{
         color: #777;
+        padding-bottom: 7px;
       }
     }
     .summary{
