--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -8,7 +8,6 @@ body {
   min-width: 320px;
   max-width: 640px;
   font-size: 14px;
-  background-color: #f1f1f1;
 }
 
 ul li {
@@ -45,6 +44,10 @@ a:active {
 a:-webkit-any-link {
   text-decoration: none
 }
+button, html input[type=button], input[type=reset], input[type=submit] {
+    -webkit-appearance: button;
+    cursor: pointer;
+}
 
 .hide{
   display: none;
@@ -64,6 +67,104 @@ a:-webkit-any-link {
   font-size: 0.75em !important;
 }
 
+.btn{
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.btn-default{
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-default:hover{
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.btn-info{
+  color: #fff;
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+.btn-danger {
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d43f3a;
+}
+.btn-danger:focus {
+  color: #fff;
+  background-color: #c9302c;
+  border-color: #761c19;
+}
+.btn-danger:hover {
+  color: #fff;
+  background-color: #c9302c;
+  border-color: #ac2925;
+}
+.btn-danger:active {
+  color: #fff;
+  background-color: #c9302c;
+  border-color: #ac2925;
+}
+.btn-danger:active:hover,
+.btn-danger:active:focus{
+  color: #fff;
+  background-color: #ac2925;
+  border-color: #761c19;
+}
+
+.btn-success {
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+.btn-success:focus {
+  color: #fff;
+  background-color: #449d44;
+  border-color: #255625;
+}
+.btn-success:hover {
+  color: #fff;
+  background-color: #449d44;
+  border-color: #398439;
+}
+.btn-success:active {
+  color: #fff;
+  background-color: #449d44;
+  border-color: #398439;
+}
+.btn-success:active:hover,
+.btn-success:active:focus {
+  color: #fff;
+  background-color: #398439;
+  border-color: #255625;
+}
+
+.btn.disabled, .btn[disabled]{
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    opacity: .65;
+}
+
 footer{
   position: fixed;
   width: 100%;
@@ -71,4 +172,44 @@ footer{
   text-align: center;
   font-size: 14px;
   color: #aaa;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
+  display: none !important;
+}
+
+
+.layer-background {
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-color: #000000;
+  filter: alpha(opacity=70);
+  -moz-opacity: 0.70;
+  opacity: 0.70;
+  position: fixed;
+  z-index: 4;
+  top: 0;
+  left: 0;
+}
+.layer-share {
+  width: 100%;
+  background-color: #ffffff;
+  position: fixed;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  text-align: center;
+  font-weight: bold;
+  padding: 40px 0;
+  .share-tips{
+    width: 90%; 
+    margin: 0 auto; 
+    font-size: 1.3em;
+    color: #c73c3c;
+  }
+}
+
+.margin-bottom-8{
+  margin-bottom: 8px !important;
 }
