--- a/resources/assets/sass/issue.scss
+++ b/resources/assets/sass/issue.scss
@@ -2,19 +2,25 @@
 
 .issue-container{
   min-height: 500px;
-  .kickoff-page{
-    text-align:center;
-    .page-header{
+  .page{
+    .header{
       padding-bottom: 20px;
-      margin: 40px 0 20px;
+      margin: 40px 0 0;
       border-bottom: 1px solid #ccc;
+      text-align: center;
       .sub-title{
         color: #777;
         padding-bottom: 7px;
       }
     }
+    .content{
+      padding: 20px 8px 8px;
+    }
+  }
+
+  .kickoff-page{
+    text-align:center;
     .summary{
-      padding: 8px;
       margin-bottom: 30px;
       p{
         span{
@@ -43,21 +49,36 @@
     }
   }
   .question-page{
-    display: none;
+    .choices{
+      margin-top: 50px;
+      .choice{
+        text-align: center;
+        margin-bottom: 20px;
+        .btn{
+          display: inline-block;
+          width: 60%;
+        }
+      }
+    }
+    .operation{
+      width: 100%;
+      position: fixed;
+      bottom: 10%;
+      .btn{
+        margin-right: 20px;
+      }
+    }
   }
   .result-page{
-    display: none;
-    .share-dialog {
-      width: 100%;
-      background-color: #ffffff;
-      color: #c73c3c;
-      position: fixed;
-      z-index: 5;
-      left: 0;
-      top: 0;
+    .operations{
+      margin-bottom: 20px;
+      .operation{
+        font-size: 1.5em;
+        padding: 0 0 8px 8px;
+      }
+    }
+    .wechat-code{
       text-align: center;
-      font-weight: bold;
-      padding: 40px 0;
     }
   }
 }
