--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -17,7 +17,11 @@ ul li {
 textarea, input {
   outline: none
 }
-
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+  background-color: white !important;
+  background-image: none;
+  color: rgb(0, 0, 0);
+}
 p{
   margin: 0;
 }
@@ -156,6 +160,35 @@ button, html input[type=button], input[type=reset], input[type=submit] {
   background-color: #398439;
   border-color: #255625;
 }
+.btn-info {
+  color: #fff;
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+.btn-info:focus {
+  color: #fff;
+  background-color: #31b0d5;
+  border-color: #1b6d85;
+}
+.btn-info:hover {
+  color: #fff;
+  background-color: #31b0d5;
+  border-color: #269abc;
+}
+.btn-info:active {
+  color: #fff;
+  background-color: #31b0d5;
+  border-color: #269abc;
+}
+.btn-info:active:hover,
+.btn-info:active:focus{
+  color: #fff;
+  background-color: #269abc;
+  border-color: #1b6d85;
+}
+.btn-info:active{
+  background-image: none;
+}
 
 .btn.disabled, .btn[disabled]{
     cursor: not-allowed;
@@ -212,4 +245,171 @@ footer{
 
 .margin-bottom-8{
   margin-bottom: 8px !important;
+}
+.margin-right-8{
+  margin-right: 8px !important;
+}
+
+.bg-info {
+  background-color: #d9edf7;
+}
+
+.page{
+  .header{
+    padding-bottom: 20px;
+    margin: 40px 0 0;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+    .sub-title{
+      color: #777;
+      padding-bottom: 7px;
+    }
+  }
+  .content{
+    padding: 20px 12px 12px;
+  }
+}
+.operations{
+  margin-bottom: 20px;
+  .operation{
+    font-size: 1.5em;
+    padding: 0 0 8px 8px;
+  }
+}
+
+.form-group {
+  margin-bottom: 15px;
+  .label{
+    font-size: 1.2em;
+    font-weight: bold;
+    padding-bottom: 0.5em;
+    display: block;
+  }
+  .input-container{
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    padding: 12px;
+    color: #333;
+    input{
+      border: 0;
+      line-height: 20px;
+      font-size: 1.1em;
+      outline: 0;
+      width: 100%;
+    }
+    textarea{
+      display: block;
+      height: 60px;
+      line-height: 20px;
+      font-size: 1.1em;
+      color: #333;
+      border: 0;
+      width: 100%;
+      resize: none;
+      outline: 0;
+    }
+  }
+  .input-container.has-error{
+    border-color: red;
+  }
+}
+
+.shrink-container {
+  position: relative;
+  .shrink-right {
+    display: none;
+    width: 40px;
+    border: 1px solid #ddd;
+    text-align: center;
+    color: #333;
+    background-color: #FFF;
+    text-decoration: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+.shrink-container.shrinking {
+  padding-right: 40px
+}
+.shrink-container.shrinking .shrink-right {
+    display: block
+}
+.multi-line-form{
+  margin-bottom: 15px;
+  .line {
+    border-radius: 2px 2px 0 0;
+    border: 1px solid #ddd;
+    padding: 12px;
+    position: relative;
+    label{
+      font-size: 1.1em;
+      font-weight: normal;
+      position: absolute;
+      left: 12px;
+      top: 12px;
+    }
+    input{
+      padding-left: 74px;
+      border: 0;
+      line-height: 20px;
+      font-size: 1.1em;
+      outline: 0;
+      width: 72%;
+    }
+  }
+  .line.has-error{
+    border-color: red !important;
+    color: red !important;
+  }
+}
+
+.menu-bottom {
+  box-sizing: border-box;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  padding: 0;
+  text-align: center;
+  background: #f7f7f9;
+  color: #666;
+  border-top: 1px #b3b4b6 solid;
+  height: 49px;
+  z-index: 10;
+  .btn.full{
+    width: 100%;
+    height: 100%;
+    font-size: 1.2em;
+  }
+}
+.has-menu-bottom{
+  margin-bottom: 49px;
+}
+.menu-top{
+  text-align:center;
+  line-height: 44px;
+  background-color: #FFF;
+  border-bottom: 1px #ddd solid;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  .left{
+    position: absolute;
+    left: 15px;
+    text-decoration: none;
+    color: #333;
+    width: 4em;
+    height: 44px;
+  }
+}
+.has-menu-top{
+  margin-top: 45px;
+}
+
+.wechat-code{
+  text-align: center;
+  color: #337ab7;
 }
