--- a/resources/assets/sass/question-add.scss
+++ b/resources/assets/sass/question-add.scss
@@ -8,6 +8,11 @@
       border: 1px solid #ddd;
       background-color: #EEE;
       text-decoration: none;
+      .iconfont{
+        color: #337ab7;
+        font-size: 1.2em;
+        margin-right: 3px;
+      }
     }
   } 
   .shrink-container.shrinking {
