--- a/resources/assets/sass/iconfont.scss
+++ b/resources/assets/sass/iconfont.scss
@@ -1,9 +1,9 @@
 @font-face {font-family: "iconfont";
-  src: url('/fonts/iconfont.eot?t=1466149363'); /* IE9*/
-  src: url('/fonts/iconfont.eot?t=1466149363#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('/fonts/iconfont.woff?t=1466149363') format('woff'), /* chrome, firefox */
-  url('/fonts/iconfont.ttf?t=1466149363') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('/fonts/iconfont.svg?t=1466149363#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('/static/fonts/iconfont.eot?t=1466149363'); /* IE9*/
+  src: url('/static/fonts/iconfont.eot?t=1466149363#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('/static/fonts/iconfont.woff?t=1466149363') format('woff'), /* chrome, firefox */
+  url('/static/fonts/iconfont.ttf?t=1466149363') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('/static/fonts/iconfont.svg?t=1466149363#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
