update js/css version

--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -70,6 +70,9 @@ button, html input[type=button], input[type=reset], input[type=submit] {
 .text-center{
   text-align: center !important;
 }
+.text-gray{
+  color: gray !important;
+}
 .size-small{
   font-size: 0.75em !important;
 }
