--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -23,7 +23,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   color: rgb(0, 0, 0);
 }
 p{
-  margin: 0;
+  margin: 0 0 0.5em 0;
 }
 a {
   color: #333333;
