--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -73,6 +73,9 @@ button, html input[type=button], input[type=reset], input[type=submit] {
 .text-gray{
   color: gray !important;
 }
+.text-info{
+  color: #337ab7 !important;
+}
 .size-small{
   font-size: 0.75em !important;
 }
