--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -270,6 +270,7 @@ footer{
     border-bottom: 1px solid #ccc;
     text-align: center;
     .sub-title{
+      display: block;
       color: #777;
       padding-bottom: 7px;
     }
@@ -281,7 +282,7 @@ footer{
 .operations{
   margin-bottom: 20px;
   .operation{
-    font-size: 1.5em;
+    font-size: 1.2em;
     padding: 0 0 8px 36px;
     position: relative;
     .iconfont{
@@ -397,6 +398,7 @@ footer{
     width: 100%;
     height: 100%;
     font-size: 1.2em;
+    color: white;
   }
 }
 .has-menu-bottom{
@@ -431,7 +433,22 @@ footer{
   margin-top: 45px;
 }
 
-.wechat-code{
-  text-align: center;
-  color: #337ab7;
+.choices{
+  margin-top: 50px;
+  .choice{
+    text-align: center;
+    margin-bottom: 20px;
+    .btn{
+      display: inline-block;
+      width: 68%;
+    }
+  }
 }
+.operation{
+  position: fixed;
+  bottom: 10%;
+  .btn{
+    margin-right: 20px;
+  }
+}
+
