update title for show/question pages

--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -114,7 +114,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
   background-color: #e6e6e6;
   border-color: #adadad;
 }
-.btn-info{
+.btn-info, a.btn-info{
   color: #fff;
   background-color: #5bc0de;
   border-color: #46b8da;
