--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -6,8 +6,10 @@
 
 body {
   min-width: 320px;
-  max-width: 640px;
+  max-width: 720px;
+  margin: 0 auto;
   font-size: 14px;
+  background-color: #e3e2e2;
 }
 
 ul li {
@@ -223,7 +225,6 @@ footer{
   display: none !important;
 }
 
-
 .layer-background {
   width: 100%;
   height: 100%;
@@ -269,7 +270,7 @@ footer{
 .page{
   .header{
     padding-bottom: 20px;
-    margin: 40px 0 0;
+    padding-top: 40px;
     border-bottom: 1px solid #ccc;
     text-align: center;
     .sub-title{
@@ -361,6 +362,7 @@ footer{
 .shrink-container.shrinking .shrink-right {
     display: block
 }
+
 .multi-line-form{
   margin-bottom: 15px;
   .line {
@@ -389,6 +391,13 @@ footer{
   }
 }
 
+.menu-container{
+  width: 100%;
+  height: 100%;
+  max-width: 720px;
+  display: inline-block;
+  position: relative;
+}
 .menu-bottom {
   box-sizing: border-box;
   position: fixed;
@@ -397,11 +406,12 @@ footer{
   bottom: 0;
   padding: 0;
   text-align: center;
-  background: #f7f7f9;
   color: #666;
-  border-top: 1px #b3b4b6 solid;
   height: 49px;
   z-index: 10;
+  .menu-container{
+    border-top: 1px solid #ddd;
+  }
   .btn.full{
     width: 100%;
     height: 100%;
@@ -416,13 +426,15 @@ footer{
   text-align:center;
   line-height: 44px;
   color: white;
-  border-bottom: 1px #ddd solid;
   font-size: 1.2em;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
+  .menu-container{
+    border-bottom: 1px #ddd solid;
+  }
   .left{
     position: absolute;
     left: 15px;
@@ -461,6 +473,10 @@ footer{
   }
 }
 
+.container{
+  background-color: #FFF;
+  min-height: 720px;
+}
 
 .spinner {
   text-align: center;
