--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -524,3 +524,22 @@ footer{
     }
   }
 }
+
+.page{
+  .questions{
+    .question{
+      display: block;
+      padding: 10px 0;
+      border-bottom: 1px solid #ccc;
+      .name{
+        display: block;
+        font-size: 1.2em;
+        padding-bottom: 5px;
+      }
+      .description{
+        color: gray;
+        padding-left: 1em;
+      }
+    }  
+  }
+}
