auto complete when add tags

--- a/resources/assets/sass/tags-input.scss
+++ b/resources/assets/sass/tags-input.scss
@@ -116,7 +116,7 @@ tags-input {
     .suggestion-item.selected{
       tags-input, em {
         color: #fff;
-        background-color: #0097cf;
+        background: #5bc0de;
       }
     }
   }
