show tags if a question has tags

--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -211,6 +211,9 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     box-shadow: none;
     opacity: .65;
 }
+.btn.btn-tiny{
+  padding: 2px 4px;
+}
 
 footer{
   position: fixed;
