--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -206,8 +206,27 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     box-shadow: none;
     opacity: .65;
 }
-.btn.btn-tiny{
-  padding: 2px 4px;
+
+.tags{
+  
+}
+.tag{
+  color: #46b8da;
+  background-color: #E1ECF4;
+  border-color: transparent;
+  position: relative;
+  display: inline-block;
+  padding: .4em .5em;
+  margin: 2px 2px 2px 0;
+  font-size: 11px;
+  line-height: 1;
+  white-space: nowrap;
+  text-decoration: none;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 0;
+  transition: all .15s ease-in-out;  
 }
 
 footer{
