--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -76,7 +76,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
   text-align: center !important;
 }
 .text-gray{
-  color: #CCC !important;
+  color: #858C93 !important;
 }
 .text-info{
   color: #337ab7 !important;
