--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -211,7 +211,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
   
 }
 .tag{
-  color: #46b8da;
+  color: #337ab7;
   background-color: #E1ECF4;
   border-color: transparent;
   position: relative;
