--- a/resources/assets/sass/common.scss
+++ b/resources/assets/sass/common.scss
@@ -55,6 +55,10 @@ button, html input[type=button], input[type=reset], input[type=submit] {
     cursor: pointer;
 }
 
+.pb6{
+  padding-bottom: 6px;
+}
+
 .has-error{
   color: #c9302c !important;
 }
